add_executable(cont_concepts cont_concepts.cpp)
add_test(test.cont.concepts cont_concepts)

add_executable(insert insert.cpp)
add_test(test.cont.insert insert)

add_executable(push_front push_front.cpp)
add_test(test.cont.push_front push_front)

add_executable(push_back push_back.cpp)
add_test(test.cont.push_back push_back)
