add_executable(cont.concepts cont_concepts.cpp)
add_test(test.cont.concepts cont.concepts)

add_executable(cont.insert insert.cpp)
add_test(test.cont.insert cont.insert)

add_executable(cont.push_front push_front.cpp)
add_test(test.cont.push_front cont.push_front)

add_executable(cont.push_back push_back.cpp)
add_test(test.cont.push_back cont.push_back)

add_executable(cont.sort sort.cpp)
add_test(test.cont.sort cont.sort)

add_executable(cont.unique unique.cpp)
add_test(test.cont.unique cont.unique)
