add_executable(cont.concepts cont_concepts.cpp)
add_test(test.cont.concepts cont.concepts)

add_executable(cont.drop drop.cpp)
add_test(test.cont.drop cont.drop)

add_executable(cont.drop_while drop_while.cpp)
add_test(test.cont.drop_while cont.drop_while)

add_executable(cont.erase_if erase_if.cpp)
add_test(test.cont.erase_if cont.erase_if)

add_executable(cont.insert insert.cpp)
add_test(test.cont.insert cont.insert)

add_executable(cont.push_front push_front.cpp)
add_test(test.cont.push_front cont.push_front)

add_executable(cont.push_back push_back.cpp)
add_test(test.cont.push_back cont.push_back)

add_executable(cont.slice slice.cpp)
add_test(test.cont.slice cont.slice)

add_executable(cont.sort sort.cpp)
add_test(test.cont.sort cont.sort)

add_executable(cont.stride stride.cpp)
add_test(test.cont.stride cont.stride)

add_executable(cont.take take.cpp)
add_test(test.cont.take cont.take)

add_executable(cont.take_while take_while.cpp)
add_test(test.cont.take_while cont.take_while)

add_executable(cont.unique unique.cpp)
add_test(test.cont.unique cont.unique)
