add_executable(num.accumulate accumulate.cpp)
add_test(test.num.accumulate num.accumulate)

add_executable(num.adjacent_difference adjacent_difference.cpp)
add_test(test.num.adjacent_difference num.adjacent_difference)

add_executable(num.inner_product inner_product.cpp)
add_test(test.num.inner_product num.inner_product)

add_executable(num.iota iota.cpp)
add_test(test.num.iota num.iota)

add_executable(num.partial_sum partial_sum.cpp)
add_test(test.num.partial_sum num.partial_sum)
