
add_executable(utility.concepts concepts.cpp)
add_test(test.utility.concepts utility.concepts)

add_executable(utility.common_type common_type.cpp)
add_test(test.utility.common_type utility.common_type)

add_executable(utility.functional functional.cpp)
add_test(test.utility.functional utility.functional)

add_executable(utility.swap swap.cpp)
add_test(test.utility.swap utility.swap)

add_executable(utility.meta meta.cpp)
add_test(test.utility.meta utility.meta)
